[tool.poetry]
name = "ai4science101"
version = "0.1.0"
description = ""
authors = ["ai4science.school@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.0"
torch-geometric = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
